--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -91,21 +91,21 @@ bottom=15mm
 %\tableauACD{AA}{A}
 
  % \tableauAC{AA}{A}
-	
+
 \newcounter{noressource}
-
+\newcounter{nosae}
 % Les ressources du semestre 1
-\forLoop{1}{\value{cptressourceA}}{noressource}{
-	%A\Alph{noressource}
-	\tableauRessource{A\Alph{noressource}}
-	\newpage
-}
+%\forLoop{1}{\value{cptRA}}{noressource}{
+	%%A\Alph{noressource}
+	%\tableauRessource{A\Alph{noressource}}
+	%\newpage
+%}
 
-\forLoop{1}{\value{cptressourceB}}{noressource}{
-	%A\Alph{noressource}
-	\tableauRessource{B\Alph{noressource}}
-	\newpage
-}
+%\forLoop{1}{\value{cptressourceB}}{noressource}{
+	%%A\Alph{noressource}
+	%\tableauRessource{B\Alph{noressource}}
+	%\newpage
+%}
 
 %\tableauRessource{AA} 
 %\tableauRessource{AB}
