--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -4,36 +4,38 @@
 \nouveausemestre{} 
 
 \input{ressources/R101.tex}
-\input{ressources/R102.tex}
-\input{ressources/R103.tex}
-\input{ressources/R104.tex}
-\input{ressources/R105.tex}
-\input{ressources/R106.tex}
-\input{ressources/R107.tex}
-\input{ressources/R108.tex}
-\input{ressources/R109.tex}
-\input{ressources/R110.tex}
-\input{ressources/R111.tex}
-\input{ressources/R112.tex}
-\input{ressources/R113.tex}
-\input{ressources/R114.tex}
-\input{ressources/R115.tex}
+%\input{ressources/R102.tex}
+%\input{ressources/R103.tex}
+%\input{ressources/R104.tex}
+%\input{ressources/R105.tex}
+%\input{ressources/R106.tex}
+%\input{ressources/R107.tex}
+%\input{ressources/R108.tex}
+%\input{ressources/R109.tex}
+%\input{ressources/R110.tex}
+%\input{ressources/R111.tex}
+%\input{ressources/R112.tex}
+%\input{ressources/R113.tex}
+%\input{ressources/R114.tex}
+%\input{ressources/R115.tex}
 
+\input{saes/SAE11.tex}
 
-% Semestre 2
-\nouveausemestre{} 
-
-\input{ressources/R201.tex}
-\input{ressources/R202.tex}
-\input{ressources/R203.tex}
-\input{ressources/R204.tex}
-\input{ressources/R205.tex}
-\input{ressources/R206.tex}
-\input{ressources/R207.tex}
-\input{ressources/R208.tex}
-\input{ressources/R209.tex}
-\input{ressources/R210.tex}
-\input{ressources/R211.tex}
-\input{ressources/R212.tex}
-\input{ressources/R213.tex}
-\input{ressources/R214.tex}
+%
+%% Semestre 2
+%\nouveausemestre{} 
+%
+%\input{ressources/R201.tex}
+%\input{ressources/R202.tex}
+%\input{ressources/R203.tex}
+%\input{ressources/R204.tex}
+%\input{ressources/R205.tex}
+%\input{ressources/R206.tex}
+%\input{ressources/R207.tex}
+%\input{ressources/R208.tex}
+%\input{ressources/R209.tex}
+%\input{ressources/R210.tex}
+%\input{ressources/R211.tex}
+%\input{ressources/R212.tex}
+%\input{ressources/R213.tex}
+%\input{ressources/R214.tex}
