--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -3,6 +3,12 @@
 % Semestre 1
 \nouveausemestre{} 
 
+\input{saes/SAE11.tex}
+\input{saes/SAE12.tex}
+\input{saes/SAE13.tex}
+\input{saes/SAE14.tex}
+\input{saes/SAE15.tex}
+
 \input{ressources/R101.tex}
 %\input{ressources/R102.tex}
 %\input{ressources/R103.tex}
@@ -19,12 +25,17 @@
 %\input{ressources/R114.tex}
 %\input{ressources/R115.tex}
 
-\input{saes/SAE11.tex}
+
 
 %
 %% Semestre 2
 %\nouveausemestre{} 
-%
+
+\input{saes/SAE21.tex}
+\input{saes/SAE22.tex}
+\input{saes/SAE23.tex}
+%\input{saes/SAE24.tex}
+
 %\input{ressources/R201.tex}
 %\input{ressources/R202.tex}
 %\input{ressources/R203.tex}
