Ajout l'export yaml des ExemplesSAE

--- a/latex/macros_formations.sty
+++ b/latex/macros_formations.sty
@@ -161,7 +161,7 @@
 
 
 % ****************************
-% Déclaration de la ressource :
+% Déclaration de la saé :
 % \nouvellesae{code_sae}{intitule_sae}
 \def\nouvellesae#1#2{
 	\addtocounter{cptsae}{1} % Ajoute une ressource (tous semestres confondu)
