--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -23,7 +23,8 @@
 
 
 % Le description
-\ajoutSdescription{Il s'agit de faire prendre conscience aux étudiants les risques
+\ajoutSdescription{
+Il s'agit de faire prendre conscience aux étudiants les risques
 potentiels pris par l'usager d'un environnement numérique et de leur
 fournir les réflexes afin de devenir un usager conscient, averti et
 responsable. L'hygiène informatique et les bonnes pratiques de l'usage
