--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -2,7 +2,7 @@
 % Ressources
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\nouvellesae{SAÉ12}{S’initier aux réseaux informatiques}
+\nouvellesae{SAÉ12}{S'initier aux réseaux informatiques}
 
 \ajoutSheures{10}{7}{20}
 
