--- a/latex/macros_formations.sty
+++ b/latex/macros_formations.sty
@@ -174,6 +174,7 @@
 
 	\newcounter{cptScomp\currentSsae} % le compteur de compétences rattachées à la ressource
 	\newcounter{cptSressource\currentSsae} % Le compteur de ressources dans la SAé
+	\newcounter{cptSexemple\currentSsae} % Le compteur d'exemples d'une SAE
 }
 
 % ****************************
@@ -239,6 +240,18 @@
 % Ajout des mots-clés
 \def\ajoutSmotscles#1{
 	\expandafter\xdef\csname Smotscles\currentSsae\endcsname{#1} % mots-clés
+}
+
+% *********************************************
+% Exemples de SAE
+% *********************************************
+\def\nouvelexemple#1#2{
+	\addtocounter{cptSexemple\currentSsae}{1} % Ajoute un exemple (tous semestres confondu)
+	\def\currentESsae{\currentSsae\Alph{cptSexemple\currentSsae}} %
+
+	\expandafter\xdef\csname EScode\currentESsae\endcsname{#1} % code
+	\expandafter\xdef\csname ESname\currentESsae\endcsname{#2} % nom/intitule
+	% \expandafter\xdef\csname ESsem\currentESsae\endcsname{\csname semestrenumero\currentsemestre\endcsname} % nom du semestre
 }
 
 
