--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ11}{Sensibilisation à l'hygiène informatique et à la cybersécurité}
