--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ13}{Découvrir un dispositif de transmission}
