--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ15}{Traitement de données}
