--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ21}{Construire un réseau informatique pour une petite structure}
