--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ22}{Mesurer et caractériser un signal ou un système}
