--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ23}{Mettre en place une solution informatique pour l’entreprise}
