--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -4,10 +4,27 @@
 \nouveausemestre{} 
 
 \input{saes/SAE11.tex}
+\input{saes/SAE11_exemple1.tex}
+\input{saes/SAE11_exemple2.tex}
+\input{saes/SAE11_exemple3.tex}
+
 \input{saes/SAE12.tex}
+\input{saes/SAE12_exemple1.tex}
+\input{saes/SAE12_exemple2.tex}
+\input{saes/SAE12_exemple3.tex}
+\input{saes/SAE12_exemple4.tex}
+
 \input{saes/SAE13.tex}
+\input{saes/SAE13_exemple1.tex}
+\input{saes/SAE13_exemple2.tex}
+\input{saes/SAE13_exemple3.tex}
+\input{saes/SAE13_exemple4.tex}
+
 \input{saes/SAE14.tex}
+\input{saes/SAE14_exemple1.tex}
+
 \input{saes/SAE15.tex}
+\input{saes/SAE15_exemple1.tex}
 
 \input{ressources/R101.tex}
 %\input{ressources/R102.tex}
