--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ12}{S'initier aux réseaux informatiques}
