--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Ressources
+% SAE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \nouvellesae{SAÉ14}{Se présenter sur Internet}
