--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -1,6 +1,9 @@
 \specialite{Réseaux et Télécommunications}
 
-% Semestre 1
+%%%%%%%%%%%%%%%%
+%% Semestre 1 %%
+%%%%%%%%%%%%%%%%
+
 \nouveausemestre{} 
 
 \input{saes/SAE11.tex}
@@ -27,43 +30,53 @@
 \input{saes/SAE15_exemple1.tex}
 
 \input{ressources/R101.tex}
-%\input{ressources/R102.tex}
-%\input{ressources/R103.tex}
-%\input{ressources/R104.tex}
-%\input{ressources/R105.tex}
-%\input{ressources/R106.tex}
-%\input{ressources/R107.tex}
-%\input{ressources/R108.tex}
-%\input{ressources/R109.tex}
-%\input{ressources/R110.tex}
-%\input{ressources/R111.tex}
-%\input{ressources/R112.tex}
-%\input{ressources/R113.tex}
-%\input{ressources/R114.tex}
-%\input{ressources/R115.tex}
+\input{ressources/R102.tex}
+\input{ressources/R103.tex}
+\input{ressources/R104.tex}
+\input{ressources/R105.tex}
+\input{ressources/R106.tex}
+\input{ressources/R107.tex}
+\input{ressources/R108.tex}
+\input{ressources/R109.tex}
+\input{ressources/R110.tex}
+\input{ressources/R111.tex}
+\input{ressources/R112.tex}
+\input{ressources/R113.tex}
+\input{ressources/R114.tex}
+\input{ressources/R115.tex}
 
+%%%%%%%%%%%%%%%%
+%% Semestre 2 %%
+%%%%%%%%%%%%%%%%
 
-
-%
-%% Semestre 2
-%\nouveausemestre{} 
+\nouveausemestre{} 
 
 \input{saes/SAE21.tex}
-\input{saes/SAE22.tex}
-\input{saes/SAE23.tex}
-%\input{saes/SAE24.tex}
+\input{saes/SAE21_exemple1.tex}
+\input{saes/SAE21_exemple2.tex}
+\input{saes/SAE21_exemple3.tex}
 
-%\input{ressources/R201.tex}
-%\input{ressources/R202.tex}
-%\input{ressources/R203.tex}
-%\input{ressources/R204.tex}
-%\input{ressources/R205.tex}
-%\input{ressources/R206.tex}
-%\input{ressources/R207.tex}
-%\input{ressources/R208.tex}
-%\input{ressources/R209.tex}
-%\input{ressources/R210.tex}
-%\input{ressources/R211.tex}
-%\input{ressources/R212.tex}
-%\input{ressources/R213.tex}
-%\input{ressources/R214.tex}
+\input{saes/SAE22.tex}
+\input{saes/SAE22_exemple1.tex}
+\input{saes/SAE22_exemple2.tex}
+\input{saes/SAE22_exemple3.tex}
+
+\input{saes/SAE23.tex}
+\input{saes/SAE23_exemple1.tex}
+\input{saes/SAE23_exemple2.tex}
+
+
+\input{ressources/R201.tex}
+\input{ressources/R202.tex}
+\input{ressources/R203.tex}
+\input{ressources/R204.tex}
+\input{ressources/R205.tex}
+\input{ressources/R206.tex}
+\input{ressources/R207.tex}
+\input{ressources/R208.tex}
+\input{ressources/R209.tex}
+\input{ressources/R210.tex}
+\input{ressources/R211.tex}
+\input{ressources/R212.tex}
+\input{ressources/R213.tex}
+\input{ressources/R214.tex}
