Ajout des tableaux introductifs, listant les SAé et les ressources

--- a/latex/modeles/tableau.tex
+++ b/latex/modeles/tableau.tex
@@ -17,7 +17,10 @@
 % Compteur de ligne pour les tableaux
 \newcounter{noligne}
 
-% Liste des apprentissages critiques
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Liste des apprentissages critiques %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 % \listeAC{R}{code_ressource}{lettre_competence} pour une ressource
 % \listeAC{S}{code_ressource}{lettre_competence} pour une sae
 \newcommand*{\listeAC}[3]{%
