--- a/latex/modeles/tableau_exemple.tex
+++ b/latex/modeles/tableau_exemple.tex
@@ -12,7 +12,7 @@
 % 1er tableau : Nom/Code/Semestre
 
 % 3ème tableau : descriptif
-\begin{longtable}[t]{|P|T|}
+\begin{tabular}[t]{|P|T|}
 \hline
 	{\bfseries Exemple de la SAÉ} &
 		{\csname ESsae\EXEMPLE\endcsname} \\
@@ -51,5 +51,5 @@
 }
 & \tableauChampLong{\csname ESmodalite\EXEMPLE\endcsname} \\
 \hline
-\end{longtable}
+\end{tabular}
 }
